Enhanced the user interface with the following changes: 1. Added the 'Inter' sans-serif font family to the project, providing a more modern and aesthetic look. 2. Improved the color scheme, incorporating a harmonious blend of shades for a visually appealing design. 3. Refactored and made the 'ButtonTag' component reusable across the application. 4. Updated the 'ButtonTag' styles, applying a consistent and eye-catching color scheme. 5. Ensured better responsiveness and alignment in the 'NewsLatter' component. 6. Applied the 'Inter' font family to the 'NewsLatter' component for a cohesive design. These changes contribute to a more polished and user-friendly appearance across the application.

--- a/src/Components/ButtonTag/ButtonTag.scss
+++ b/src/Components/ButtonTag/ButtonTag.scss
@@ -1,11 +1,13 @@
 .btn-view {
   background: #1b88f4 !important;
   color: #fff !important;
-  width: 232px !important;
+  width: 100% !important;
   height: 48px !important;
   text-align: center !important;
   border-radius: 12px !important;
   border: none !important;
+  font-size: 16px;
+  line-height: 24px;
 
   &:hover {
     scale: 1.01 !important;
