--- a/src/Components/Cards/Cards.scss
+++ b/src/Components/Cards/Cards.scss
@@ -1,6 +1,6 @@
 .card-img-container {
   margin-bottom: 10px;
-  width: 25%;
+  width: 23%;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -21,7 +21,7 @@
 .card-text {
   font-size: 14px;
   color: #333;
-  width: 50%;
+  width: 46%;
   margin-top: 20px;
 
   .card-heading,
@@ -103,7 +103,8 @@
   align-items: center;
   justify-content: space-between;
   margin-bottom: 10px;
-  width: 25%;
+  padding-right: 10px;
+  width: 23%;
   .rating-box {
     width: 135px;
     height: 118px;
