--- a/src/HomePage/Card/Card.scss
+++ b/src/HomePage/Card/Card.scss
@@ -3,10 +3,11 @@
   flex-direction: column;
   justify-content: space-around;
   .card-container {
-    border: 1px solid #000000;
-    padding: 0 10px 10px 10px;
-    margin: 10px;
+    // border: 1px solid #000000;
+    // padding: 0 10px 10px 10px;
+    margin: 10px 0;
     display: flex;
     width: 100%;
+    justify-content: space-between;
   }
 }
