--- a/src/HomePage/RelatedDeals/RelatedDeals.scss
+++ b/src/HomePage/RelatedDeals/RelatedDeals.scss
@@ -2,4 +2,12 @@
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
+  // gap: 20px;
+}
+.RD-heading {
+  font-size: 32px;
+  line-height: 44px;
+  font-weight: normal;
+  color: #2c384a;
+  margin: 40px 0 10px 0;
 }
