--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,10 +3,12 @@ body {
   padding: 0;
   margin: 0;
   background: #fbfcfd;
+  font-family: "Inter", sans-serif;
 }
 .container {
   max-width: 1024px;
   margin: 0 auto;
+  font-family: "Inter", sans-serif;
 }
 h1,
 h2,
@@ -27,7 +29,7 @@ p {
   line-height: 20px;
 }
 .bg1 {
-  background: #fff;
+  /* background: #fff; */
 }
 li {
   list-style: none;
